[package]
name = "rolldown_binding"
version = "0.0.1"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]